# disocrd-bot

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  message_data.rs  utils.rs
src/message_data/: channels.rs  emoji.rs  message.rs  user.rs
