[package]
name = "disocrd-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
dotenvy = "0.15.7"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serenity = { git = "https://github.com/serenity-rs/serenity.git", features = [
    "framework",
    "standard_framework",
] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
