[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.10.0", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serenity = { git = "https://github.com/serenity-rs/serenity.git", features = [
    "framework",
    "standard_framework",
] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
